--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
-.pic {
-    display: flex;
-}
+/*.gallery {
+display: "flex";
+gap: "20px";
+marginLeft: "auto";
+marginRight: "auto";
+listStyle: "none";
+}*/
